--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-day-picker": "^9.12.0",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.68.0",
+    "recharts": "^3.5.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.13",
